MDEV-9886 Illegal mix of collations with a view comparing a field to a binary constant